fix: get knowledge without filtering
